--- a/templates/admin/artwork/index.html.twig
+++ b/templates/admin/artwork/index.html.twig
@@ -24,6 +24,7 @@
                         <td>{{ result.description    }}</td>
                         <td>
                             <img src="{{ result.image }}" class="w-25" alt="">
+                            <img src="{{ asset('img/artwork/' ~ result.image) }}" class="w-25" alt="">
                         </td>
                         <td>
                             {# afficher les catégories #}
