--- a/templates/admin/category/form.html.twig
+++ b/templates/admin/category/form.html.twig
@@ -1,18 +1,29 @@
 {% extends 'admin.base.html.twig' %}
 
 {% block body %}
-    <div class="row">
-        <div class="col">
-            <h1>Formulaire des oeuvres</h1>
-            {{ form_start(form, { attr : { novalidate: 'novalidate' } }) }}
-            <p>
-                {{ form_label(form.name, 'Nom: ') }}
-                {{ form_widget(form.name) }}
-            </p>
-            <p>
-                <input type="submit" value="Valider" class="btn btn-primary">
-            </p>
-            {{ form_end(form) }}
+
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="col d-inline-flex justify-content-between">
+            <h1 class="h3 mb-2 text-gray-800">Ajout d'une catégorie</h1>
+        </div>
+
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+
+            <div class="card-body">
+                {{ form_start(form, { attr : { novalidate: 'novalidate' , class : 'user'} }) }}
+                <p>
+                    {{ form_label(form.name, 'Nom: ') }}
+                    {{ form_widget(form.name) }}
+                </p>
+                <p>
+                    <input type="submit" value="Valider" class="btn btn-primary btn-user btn-block">
+                </p>
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
+
+
 {% endblock %}
