--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,5 +2,8 @@
 {% block title %}Tableau de bord{% endblock %}
 
 {% block body %}
-<h1>Tableau de bord</h1>
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Tableau de bord</h1>
+
+</div>
 {% endblock %}
