--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -8,7 +8,7 @@ Accueil
 
 {% block body %}
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Tableau de bord</h1>
+    <h1 class="h3 mb-0 text-gray-800">Tito Salagado</h1>
 
 </div>
 {% endblock %}
