--- a/templates/public/legal/index.html.twig
+++ b/templates/public/legal/index.html.twig
@@ -1,15 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="row">
-        <div class="col text-align-center">
-            <section class="contain">
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="col d-inline-flex justify-content-between">
+            <h1 class="h3 mb-2 text-gray-800">Mentions légales</h1>
+        </div>
 
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
 
-                <h1 class="post-title">Mentions legales</h1>
-
-
-                <!-- article -->
+            <div class="card-body">
                 <article id="post-445" class="post-content">
 
                     <h2>Informations légales</h2>
@@ -80,11 +81,8 @@
 
 
                 </article>
-                <!-- /article -->
-
-
-
-            </section>
+            </div>
         </div>
     </div>
+
 {% endblock %}
