--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,9 @@
 
     {{ encore_entry_link_tags('app') }}
 
+
+
+
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 </head>
 <body>
@@ -21,40 +24,62 @@
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-
+                <div class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <a href="{{ path('home.index') }}">
+                        <i class="fas fa-home fa-3x"></i>
+                    </a>
+                </div>
 
 
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
 
-                    <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                    <li class="nav-item dropdown no-arrow d-sm-none">
-                        <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-search fa-fw"></i>
-                        </a>
-                        <!-- Dropdown - Messages -->
-                        <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                            <form class="form-inline mr-auto w-100 navbar-search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fas fa-search fa-sm"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
+
 
 
                     <!-- Nav Item - User Information -->
-                    <li class="nav-item dropdown no-arrow">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ app.user.username }}</span>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Oeuvres
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animated--grow-in" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{{ path("site.artwork.index") }}">Tous</a>
+                            <a class="dropdown-item" href="{{ path("site.artwork.category.index", { 'category': 'peinture' }) }}">Peinture</a>
+                            <a class="dropdown-item" href="{{ path("site.artwork.category.index", { 'category': 'peinture' }) }}">Dessin</a>
+                            <a class="dropdown-item" href="{{ path("site.artwork.category.index", { 'category': 'peinture' }) }}">Sculpture</a>
+                            <div class="dropdown-divider"></div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('site.expo.index') }}" role="button">
+                            Expositions
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('contact.form') }}" role="button">
+                            Contact
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('site.mentions.legales.index') }}" role="button">
+                            Mentions légales
+                        </a>
+                    </li>
+                    {% if not app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('security.login') }}" role="button">
+                            Connexion
+                        </a>
+                    </li>
+
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('dashboard.index') }}" role="button">
+                                Tableau de bord
+                            </a>
+                        </li>
+                    {% endif %}
 
                 </ul>
 
@@ -90,4 +115,5 @@
 
 
 {{ encore_entry_script_tags('app') }}
+
 </html>
