--- a/templates/public/artwork/show.html.twig
+++ b/templates/public/artwork/show.html.twig
@@ -2,15 +2,24 @@
 
 {% block body %}
 
-    <div class="row">
-        <div class="col-sm-6 offset-sm-3">
-            <h2>{{ artwork.name }}</h2>
-            <img src="{{ artwork.image }}">
-            <img src="{{ asset('img/artwork/' ~ artwork.image) }}">
-            <p>{{ artwork.description }}</p>
-            <p>
-                <a href="{{ path("site.artwork.index") }}" class="btn btn-primary">Toutes les oeuvres</a>
-            </p>
+
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="col d-inline-flex justify-content-between">
+            <h1 class="h3 mb-2 text-gray-800">{{ artwork.name }}</h1>
+        </div>
+
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+
+            <div class="card-body">
+                <img src="{{ artwork.image }}">
+                <img src="{{ asset('img/artwork/' ~ artwork.image) }}">
+                <p>{{ artwork.description }}</p>
+                <p>
+                    <a href="{{ path("site.artwork.index") }}" class="btn btn-primary">Toutes les oeuvres</a>
+                </p>
+            </div>
         </div>
     </div>
 {% endblock %}
