--- a/templates/public/contact/form.html.twig
+++ b/templates/public/contact/form.html.twig
@@ -2,25 +2,36 @@
 
 {% block body %}
     {% include 'inc/flash.message.html.twig' %}
-    <div class="col">
-        <h1>Contact</h1>
-        {{ form_start(form, { attr: { novalidate: 'novalidate' } }) }}
-        <p>
-            {{ form_label(form.lastname, 'Nom: ') }}
-            {{ form_widget(form.lastname) }}
-        </p>
-        <p>
-            {{ form_label(form.email, 'Email: ') }}
-            {{ form_widget(form.email) }}
-        </p>
-        <p>
-            {{ form_label(form.message, 'Message: ') }}
-            {{ form_widget(form.message) }}
-        </p>
-        <p>
-            <input type="submit" value="Valider" class="btn btn-primary">
-        </p>
-        {{ form_end(form) }}
+
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="col d-inline-flex justify-content-between">
+            <h1 class="h3 mb-2 text-gray-800">Contact</h1>
+        </div>
+
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+
+            <div class="card-body">
+                {{ form_start(form, { attr: { novalidate: 'novalidate', class : 'user' } }) }}
+                <p>
+                    {{ form_label(form.lastname, 'Nom: ') }}
+                    {{ form_widget(form.lastname) }}
+                </p>
+                <p>
+                    {{ form_label(form.email, 'Email: ') }}
+                    {{ form_widget(form.email) }}
+                </p>
+                <p>
+                    {{ form_label(form.message, 'Message: ') }}
+                    {{ form_widget(form.message) }}
+                </p>
+                <p>
+                    <input type="submit" value="Valider" class="btn btn-primary btn-user btn-block">
+                </p>
+                {{ form_end(form) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
 
